--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://lastphish.com" />
   <meta property="og:image" content="/thumbnail.png" />
+  <meta property="og:description" content="Automatically send personalized phishing campaigns to your employees, with a 100% delivery success rate, no allowlisting required, and standardized reporting.">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
